@@ -2657,6 +2657,11 @@ all \- all of the above.
 .RE
 .RE
 .TP
+.BI "                                         :tabclose"
+.TP
+.BI ":tabclose"
+close current tab, unless it's the only one open at current scope.
+.TP
 .BI "                                         :tabname"
 .TP
 .BI ":tabname [name]"
