@@ -19,9 +19,9 @@ syntax keyword vifmCommand contained alink apropos bmark bmarks bmgo change
 		\ fini[sh] gr[ep] h[elp] histnext his[tory] histprev jobs locate ls lstrash
 		\ marks mes[sages] mkdir m[ove] noh[lsearch] on[ly] popd pushd pu[t] pw[d]
 		\ q[uit] redr[aw] reg[isters] rename restart restore rlink screen sh[ell]
-		\ siblnext siblprev sor[t] sp[lit] s[ubstitute] tabname tabnew touch tr
-		\ trashes tree sync undol[ist] ve[rsion] vie[w] vifm vs[plit] winc[md]
-		\ w[rite] wq x[it] y[ank] nextgroup=vifmArgs
+		\ siblnext siblprev sor[t] sp[lit] s[ubstitute] tabc[lose] tabname tabnew
+		\ touch tr trashes tree sync undol[ist] ve[rsion] vie[w] vifm vs[plit]
+		\ winc[md] w[rite] wq x[it] y[ank] nextgroup=vifmArgs
 
 " commands that might be prepended to a command without changing everything else
 syntax keyword vifmPrefixCommands contained windo winrun
