@@ -266,6 +266,7 @@ static void sync_location(const char path[], int cv, int sync_cursor_pos,
 		int sync_filters, int tree);
 static void sync_local_opts(int defer_slow);
 static void sync_filters(void);
+static int tabclose_cmd(const cmd_info_t *cmd_info);
 static int tabname_cmd(const cmd_info_t *cmd_info);
 static int tabnew_cmd(const cmd_info_t *cmd_info);
 static int touch_cmd(const cmd_info_t *cmd_info);
@@ -744,6 +745,10 @@ const cmd_add_t cmds_list[] = {
 	  .descr = "synchronize properties of views",
 	  .flags = HAS_EMARK | HAS_COMMENT | HAS_MACROS_FOR_CMD,
 	  .handler = &sync_cmd,        .min_args = 0,   .max_args = NOT_DEF, },
+	{ .name = "tabclose",          .abbr = "tabc",  .id = -1,
+	  .descr = "close current tab unless it's the only one",
+	  .flags = HAS_COMMENT,
+	  .handler = &tabclose_cmd,    .min_args = 0,   .max_args = 0, },
 	{ .name = "tabname",           .abbr = NULL,    .id = -1,
 	  .descr = "set name of current tab",
 	  .flags = HAS_COMMENT,
@@ -3928,6 +3933,14 @@ sync_filters(void)
 	other_view->manual_filter = matcher_clone(curr_view->manual_filter);
 	(void)filter_assign(&other_view->auto_filter, &curr_view->auto_filter);
 	ui_view_schedule_reload(other_view);
+}
+
+/* Closes current tab unless it's the last one. */
+static int
+tabclose_cmd(const cmd_info_t *cmd_info)
+{
+	tabs_close();
+	return 0;
 }
 
 /* Sets, changes or resets name of current tab. */
